build/log/idf_py_stdout_output_80904
Command: ninja all
[1/13] Performing build step for 'bootloader'
[1/1] cd /home/chandrasekar/Project/home_automation/build/bootloader && /home/chandrasekar/.espressif/python_env/idf6.0_py3.12_env/bin/python /home/chandrasekar/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/chandrasekar/Project/home_automation/build/bootloader/bootloader.bin
Bootloader binary size 0x6690 bytes. 0x970 bytes (8%) free.
[2/13] No install step for 'bootloader'
[3/13] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.cpp.obj 
/home/chandrasekar/.espressif/tools/xtensa-esp-elf/esp-15.1.0_20250607/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-1489-g4e036983a7\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/chandrasekar/Project/home_automation/build/config -I/home/chandrasekar/Project/home_automation/main -I/home/chandrasekar/esp/esp-idf/components/newlib/platform_include -I/home/chandrasekar/esp/esp-idf/components/freertos/config/include -I/home/chandrasekar/esp/esp-idf/components/freertos/config/include/freertos -I/home/chandrasekar/esp/esp-idf/components/freertos/config/xtensa/include -I/home/chandrasekar/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/chandrasekar/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/chandrasekar/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/chandrasekar/esp/esp-idf/components/freertos/esp_additions/include -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/include -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/include/soc -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/dma/include -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/chandrasekar/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/chandrasekar/esp/esp-idf/components/heap/include -I/home/chandrasekar/esp/esp-idf/components/heap/tlsf -I/home/chandrasekar/esp/esp-idf/components/log/include -I/home/chandrasekar/esp/esp-idf/components/soc/include -I/home/chandrasekar/esp/esp-idf/components/soc/esp32 -I/home/chandrasekar/esp/esp-idf/components/soc/esp32/include -I/home/chandrasekar/esp/esp-idf/components/soc/esp32/register -I/home/chandrasekar/esp/esp-idf/components/hal/platform_port/include -I/home/chandrasekar/esp/esp-idf/components/hal/esp32/include -I/home/chandrasekar/esp/esp-idf/components/hal/include -I/home/chandrasekar/esp/esp-idf/components/esp_rom/include -I/home/chandrasekar/esp/esp-idf/components/esp_rom/esp32/include -I/home/chandrasekar/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/chandrasekar/esp/esp-idf/components/esp_rom/esp32 -I/home/chandrasekar/esp/esp-idf/components/esp_common/include -I/home/chandrasekar/esp/esp-idf/components/esp_system/include -I/home/chandrasekar/esp/esp-idf/components/esp_system/port/soc -I/home/chandrasekar/esp/esp-idf/components/esp_system/port/include/private -I/home/chandrasekar/esp/esp-idf/components/xtensa/esp32/include -I/home/chandrasekar/esp/esp-idf/components/xtensa/include -I/home/chandrasekar/esp/esp-idf/components/xtensa/deprecated_include -I/home/chandrasekar/esp/esp-idf/components/lwip/include -I/home/chandrasekar/esp/esp-idf/components/lwip/include/apps -I/home/chandrasekar/esp/esp-idf/components/lwip/include/apps/sntp -I/home/chandrasekar/esp/esp-idf/components/lwip/lwip/src/include -I/home/chandrasekar/esp/esp-idf/components/lwip/port/include -I/home/chandrasekar/esp/esp-idf/components/lwip/port/freertos/include -I/home/chandrasekar/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/chandrasekar/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/chandrasekar/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/chandrasekar/Project/home_automation/components/web_server -I/home/chandrasekar/esp/esp-idf/components/esp_http_server/include -I/home/chandrasekar/esp/esp-idf/components/http_parser -I/home/chandrasekar/esp/esp-idf/components/esp_event/include -I/home/chandrasekar/Project/home_automation/components/relay_controller -I/home/chandrasekar/esp/esp-idf/components/driver/deprecated -I/home/chandrasekar/esp/esp-idf/components/driver/i2c/include -I/home/chandrasekar/esp/esp-idf/components/driver/touch_sensor/include -I/home/chandrasekar/esp/esp-idf/components/driver/twai/include -I/home/chandrasekar/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/chandrasekar/esp/esp-idf/components/esp_pm/include -I/home/chandrasekar/esp/esp-idf/components/esp_ringbuf/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_gpio/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_pcnt/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_gptimer/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_spi/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_i2s/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_sdmmc/legacy/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_sd_intf/include -I/home/chandrasekar/esp/esp-idf/components/sdmmc/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_sdspi/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_sdio/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_dac/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_rmt/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_tsens/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_sdm/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_i2c/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_uart/include -I/home/chandrasekar/esp/esp-idf/components/vfs/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_ledc/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_parlio/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/chandrasekar/esp/esp-idf/components/esp_driver_twai/include -I/home/chandrasekar/Project/home_automation/components/common -I/home/chandrasekar/Project/home_automation/components/wifi_manager -I/home/chandrasekar/esp/esp-idf/components/esp_wifi/include -I/home/chandrasekar/esp/esp-idf/components/esp_wifi/include/local -I/home/chandrasekar/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/chandrasekar/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/chandrasekar/esp/esp-idf/components/esp_phy/include -I/home/chandrasekar/esp/esp-idf/components/esp_phy/esp32/include -I/home/chandrasekar/esp/esp-idf/components/esp_netif/include -I/home/chandrasekar/esp/esp-idf/components/nvs_flash/include -I/home/chandrasekar/esp/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/chandrasekar/Project/home_automation=. -fmacro-prefix-map=/home/chandrasekar/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/app_main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.cpp.obj -c /home/chandrasekar/Project/home_automation/main/app_main.cpp
/home/chandrasekar/Project/home_automation/main/app_main.cpp: In function 'void app_main()':
/home/chandrasekar/Project/home_automation/main/app_main.cpp:16:27: error: 'portTICK_PERIOD_MS' was not declared in this scope
   16 |         vTaskDelay(1000 / portTICK_PERIOD_MS); // keep main task alive
      |                           ^~~~~~~~~~~~~~~~~~
/home/chandrasekar/Project/home_automation/main/app_main.cpp:16:9: error: 'vTaskDelay' was not declared in this scope
   16 |         vTaskDelay(1000 / portTICK_PERIOD_MS); // keep main task alive
      |         ^~~~~~~~~~
[4/13] Building CXX object esp-idf/wifi_manager/CMakeFiles/__idf_wifi_manager.dir/wifi_manager.cpp.obj
[5/13] Completed 'bootloader'
[6/13] Building CXX object esp-idf/web_server/CMakeFiles/__idf_web_server.dir/web_server.cpp.obj
ninja: build stopped: subcommand failed.
